@@ -3,11 +3,14 @@ Changelog
 
 v7.7.1:
  ExerciseViewer changes:
- - updated Garmin FIT SDK library to version 20.96.00
+ - updated Garmin FIT SDK library to version 21.20.00, provides bugfixes
+   and support for newer Garmin devices
  - updated Leaflet to version 1.6.0, provides various fixes and performance
    improvements (contributed by Thomas Feuster, PR #219)
 - Bugfix for reading exercise files from Garmin Fenix 6 and 5X devices
   (Issue #220: Failed to parse exercise file on new Garmin device)
+- Garmin FIT parser: improved lookup of the device / product name
+  - added the firmware software version to the device name
 
 v7.7.0:
  SportsTracker changes:
